[package]
name = "kyute_async"
version = "0.1.0"
edition = "2021"


[dependencies]
kurbo = "0.11"
#skia-safe = { git = "https://github.com/rust-skia/rust-skia/", rev = "5f17a054e21ff0cd5b90146c218a13e3a7f3825d", features = ["textlayout"] }
skia-safe = { path = "../rust-skia/skia-safe", features = ["textlayout"] }
once_cell = "1.17.1"
threadbound = "0.1.6"
tracing = "0.1.37"
slotmap = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
palette = "0.7"
anyhow = "1.0"
thiserror = "1.0"
bitflags = "2.6"
winit = { path = "../winit" }
keyboard-types = "0.7.0"
raw-window-handle = "0.6"
bumpalo = "3.14.0"
imbl = "3.0.0"
weak-table = "0.3.2"
scoped-tls = "1.0.1"
smallvec = "2.0.0-alpha.6"
copypasta = "0.10.1"
unicode-segmentation = "1.10.1"
tracy-client = "0.17.3"
tokio = { version = "1.39.3", features = ["rt", "sync", "macros"] }
futures = { version = "0.3", features = ["executor"] }
async-stream = "0.3.5"
futures-util = "0.3.30"
slab = "0.4.9"
pin-weak = "1.1.0"
scopeguard = "1.2.0"
rerun = "0.18.2"
paste = "1.0.15"

# Windows dependencies
[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "implement",
    "Win32_Graphics_Direct2D",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D12",
    "Win32_UI_Shell_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D_Common",
    "System",
    "Foundation",
    "Graphics_DirectX",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "UI_Composition",
    "UI_Composition_Desktop",
    "Foundation_Numerics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Security",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.10", features = ["fmt", "env-filter"] }
tracing-tree = "0.4"
#tracing-tracy = "0.10.2"
spin_sleep = "1.1.1"

[features]
default = ["d3d"]
#vulkan = ["dep:graal", "skia-safe/vulkan"]
d3d = ["skia-safe/d3d"]
#svg = ["dep:roxmltree", "dep:usvg", "dep:svgtypes"]